--- a/test/test-manager/Cargo.toml
+++ b/test/test-manager/Cargo.toml
@@ -59,7 +59,9 @@ talpid-types = { path = "../../talpid-types" }
 
 ssh2 = "0.9.4"
 
-nix = { version = "0.25", features = ["net"] }
+nix = { version = "0.26", features = ["net"] }
+rend = { version = "0.4.2", features = ["bytemuck"] }
+bytemuck = { version = "1.16.1", features = ["derive"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 tun = "0.5.1"
