--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -47,10 +47,12 @@ tokio = { version = "1.8", features = [
   "rt-multi-thread",
 ] }
 tokio-serial = "5.4.1"
+
 # Serde and related crates
 serde = "1.0"
 serde_json = "1.0"
 tokio-serde = { version = "0.8.0", features = ["json"] }
+
 # Tonic and related crates
 tonic = "0.10.0"
 tonic-build = { version = "0.10.0", default-features = false }
@@ -58,20 +60,22 @@ tower = "0.4"
 prost = "0.12.0"
 prost-types = "0.12.0"
 tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
+
 # Logging
 env_logger = "0.11.0"
 thiserror = "1.0.57"
 log = "0.4"
 colored = "2.0.0"
+
 # Proxy protocols
 shadowsocks = { version = "1.16" }
 shadowsocks-service = { version = "1.16" }
 
 windows-sys = "0.52.0"
-
 chrono = { version = "0.4.26", default-features = false }
 clap = { version = "4.2.7", features = ["cargo", "derive"] }
 once_cell = "1.16.0"
 bytes = "1.3.0"
 async-trait = "0.1.58"
 surge-ping = "0.8"
+nix = { version = "0.29", features = ["ioctl", "socket", "net"] }
